deploy/kubernetes/agent-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent
  namespace: sgh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sgh-agent
  template:
    metadata:
      labels:
        app: sgh-agent
    spec:
      containers:
        - name: sgh-agent
          image: integra4sgh/agent:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8200
          #resources:
          #  requests:
          #    cpu: 100m
          #    memory: "256Mi"
