deploy/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: sgh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sgh-backend
  template:
    metadata:
      labels:
        app: sgh-backend
    spec:
      containers:
        - name: sgh-backend
          image: integra4sgh/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: "256Mi"
