deploy/kubernetes/rooms-scheduler-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rooms-scheduler
  namespace: sgh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sgh-rooms-scheduler
  template:
    metadata:
      labels:
        app: sgh-rooms-scheduler
    spec:
      containers:
        - name: sgh-rooms-scheduler
          image: integra4sgh/rooms-scheduler:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          #resources:
          #  requests:
          #    cpu: 100m
          #    memory: "256Mi"
