deploy/kubernetes/agent-service.yml
apiVersion: v1
kind: Service
metadata:
  name: agent
  namespace: sgh
spec:
  type: ClusterIP
  ports:
  - port: 8200
    protocol: TCP
    targetPort: 8200
  selector:
    app: sgh-agent
