deploy/kubernetes/rooms-scheduler-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rooms-scheduler
  namespace: sgh
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: sgh-rooms-scheduler
